Shifting and rotating works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,15 @@ set(SDL2_LIBRARY "C:/Libs/SDL2-2.0.20/lib/x64/SDL2.lib;C:/Libs/SDL2-2.0.20/lib/x
 
 include_directories(${SDL2_INCLUDE_DIR})
 set(SOURCE_FILES src/main.cpp src/Matrix.cpp src/Color.cpp src/EquationPlane.cpp src/Parallelepiped.cpp src/Pyramid.cpp 
-src/rotationMatrixes.cpp src/Surface.cpp src/ZBuffer.cpp src/Line.cpp)
+src/rotationMatrixes.cpp src/Surface.cpp src/ZBuffer.cpp src/Line.cpp src/LineSegment.cpp src/Application.cpp)
 
-add_executable(main ${SOURCE_FILES} "src/LineSegment.cpp")
+add_executable(main ${SOURCE_FILES})
 target_link_libraries(main ${SDL2_LIBRARY} )
 
-set_target_properties(main PROPERTIES LINK_FLAGS "/STACK:10000000")
+set_target_properties(main PROPERTIES LINK_FLAGS "/STACK:160000000")
 
 # target_include_directories(main ${SDL2_INCLUDE_DIR})
-# target_link_libraries(main ${SDL2_LIBRARY}) 
+# target_link_libraries(main ${SDL2_LIBRARY})
 
 
 
@@ -28,4 +28,4 @@ set_target_properties(main PROPERTIES LINK_FLAGS "/STACK:10000000")
 #set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 #include(CPack)
 
-#target_link_libraries(main SDL2main SDL2) 
+#target_link_libraries(main SDL2main SDL2)
